# rust-emb-sensor

./: .gitignore  Cargo.toml  Hardware Discussion.pptx  ~$Hardware Discussion.pptx
src/: main.rs
